--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -5,11 +5,8 @@
 <table>
   <thead>
     <tr>
-      <th>Organization</th>
+      <th>Name</th>
       <th>Address</th>
-      <th>Phone</th>
-      <th>Website</th>
-      <th>User</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -19,9 +16,6 @@
       <tr>
         <td><%= map.organization %></td>
         <td><%= map.address %></td>
-        <td><%= map.phone %></td>
-        <td><%= map.website %></td>
-        <td><%= map.user_id %></td>
         <td><%= link_to 'Show', map %></td>
         <td><%= link_to 'Edit', edit_map_path(map) %></td>
         <td><%= link_to 'Destroy', map, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -33,3 +27,5 @@
 <br>
 
 <%= link_to 'New Map', new_map_path %>
+
+<div id="address-map" style="width: 100%; height: 400px;"></div>
