--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
 
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'maps' %>
+  <%= javascript_include_tag 'maps', 'data-turbolinks-track' => true %>
 
 
 
