user ip address to zoom the map in progress

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,11 +8,12 @@
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
-  <script src="//maps.googleapis.com/maps/api/js"></script>
-
+  
+ <script type="text/javascript"
+src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAo6PzRAoZk4B0bjhRAuf-w75EPha5Y9N4">
+</script>
 
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-
 
 
 
@@ -31,6 +32,9 @@
 
 
 <%= yield %>
+
+
+
 
 </body>
 </html>
