add toggle blur

--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -1,5 +1,6 @@
 <hr>
 <div class="container"><%= image_tag("container.jpg")%></div>
+<span href="#" class="btn">Toggle Blur</span>
 <hr>
 
 <script>
@@ -274,4 +275,5 @@
 //console.log("is var vague working?")
 var vague = $(".container").Vague({intensity:10});
     vague.blur();
+$(".btn").on("click",$.proxy(vague.toggleblur,vague));
 </script>
