--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,14 +6,13 @@
   <%= csrf_meta_tags %>
 
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
-  <script src="//maps.googleapis.com/maps/api/js"></script>
-
+<script type="text/javascript"
+src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAo6PzRAoZk4B0bjhRAuf-w75EPha5Y9N4">
+</script>
 
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-
-
 
 
 </head>
