--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -1,42 +1,22 @@
-<hr>
-<div class="container"><%= image_tag("container.jpg")%></div>
-<span href="#" class="btn">Toggle Blur</span>
-<hr>
+<!-- <span href="#" class="btn"><div class="container"><%#= image_tag("ny.jpg", :size => "1000x700")%></div></span>  -->
+<!-- <span href="#" class="btn"><div class="container">HEllo</div></span>
+ -->
+
+<header>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+  
+        <span href="#" class="btn">Toggle</span>
+
+      </div>
+    </div>
+  </div>
+</header>
 
 <script>
-/**
- *
- * Version: 0.0.6
- * Author: Gianluca Guarini
- * Contact: gianluca.guarini@gmail.com
- * Website: http://www.gianlucaguarini.com/
- * Twitter: @gianlucaguarini
- *
- * Copyright (c) Gianluca Guarini
- *
- * Permission is hereby granted, free of charge, to any person
- * obtaining a copy of this software and associated documentation
- * files (the "Software"), to deal in the Software without
- * restriction, including without limitation the rights to use,
- * copy, modify, merge, publish, distribute, sublicense, and/or sell
- * copies of the Software, and to permit persons to whom the
- * Software is furnished to do so, subject to the following
- * conditions:
- *
- * The above copyright notice and this permission notice shall be
- * included in all copies or substantial portions of the Software.
- *
- * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
- * EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
- * OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
- * NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
- * HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
- * WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
- * FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
- * OTHER DEALINGS IN THE SOFTWARE.
- **/
-// console.log("is the vague plugin working?")
 (function(window, document, $) {
+  console.log("is the vague plugin working?")
   'use strict';
   // Plugin private cache
   // static vars
@@ -277,3 +257,5 @@ var vague = $(".container").Vague({intensity:10});
     vague.blur();
 $(".btn").on("click",$.proxy(vague.toggleblur,vague));
 </script>
+
+
