--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -3,15 +3,18 @@
  -->
 
 <header>
+ <span  href="#" class="btn">Toggle</span>
   <div class="container">
     <div class="row">
+
       <div class="col-lg-12">
   
-        <span href="#" class="btn">Toggle</span>
-
+    <!--     <h1>HELLO</h1> -->
+        
       </div>
     </div>
   </div>
+  
 </header>
 
 <script>
