--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,14 +19,25 @@ src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAo6PzRAoZk4B0bjhRAuf-w75EP
 
 <body>
 
+<nav>
+      <h3 id="navTop">Menu</h3>
+      <div id="menuToggle">
+          <% if user_signed_in? %>
+          <div class="row"><strong>Hi <%= current_user.email %></strong></div>
+          <div class="row"><%= link_to 'Logout', destroy_user_session_path, method: :delete %></div>
+        
+          <div class="row"><%= link_to 'Add your organization', new_user_session_path %></div>
+            <% else %>
+         
+          <div class="row"><%= link_to "See Maps", maps_path %></div>
+          <div class="row"><%= link_to 'Add your organization', new_user_session_path %></div>
+
+     <% end %>
+        </div>
+    </nav>    
 
 
-<% if user_signed_in? %>
-<%= current_user.email %>
-<%= link_to 'Logout', destroy_user_session_path, method: :delete %>
-<% else %>
- <%= link_to 'Login', new_user_session_path %>
-<% end %>
+
 
 <!--  <p class="notice"><%= notice %></p>
  <p class="alert"><%= alert %></p> -->
