--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -3,14 +3,17 @@
  -->
 
 <header>
- <span  href="#" class="btn">Toggle</span>
+ <span  href="#" class="btn">LEARN MORE</span>
   <div class="container">
     <div class="row">
 
       <div class="col-lg-12">
   
-    <!--     <h1>HELLO</h1> -->
-        
+  <article>
+    <h1>HELLO HELLO HELLO HELLO HELLO HELLO</h1> 
+    <h2>HELLO HELLO HELLO HELLO HELLO HELLO</h2> 
+    <h3>HELLO HELLO HELLO HELLO HELLO HELLO</h3> 
+        </article>
       </div>
     </div>
   </div>
