commit before restart

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,7 +23,7 @@
 
 body {
 margin:0;
-color: white;
+
 } 
 
 
@@ -35,7 +35,7 @@ background-size:cover;
 position:absolute;
 }
 
-#menuHead {
+/*#menuHead {
   position: absolute;
   display: none;
 
@@ -43,7 +43,7 @@ position:absolute;
 
 .article{
   color: white;
-}
+}*/
 /*article {
   position: absolute;
   top: 50%;
@@ -71,7 +71,7 @@ span.btn {
 }
 
 
-#navTop {
+/*#navTop {
   position: fixed;
   top: 0;
   right: 0;
@@ -107,4 +107,4 @@ span.btn {
   position: absolute;
   display: none;
 
-}
+}*/
