--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,21 @@ src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAo6PzRAoZk4B0bjhRAuf-w75EP
 
 <body>
 
+<nav>
+      <h3 id="navTop" ><span class="glyphicon glyphicon-align-justify"></span></h3>
+        <div id="menuToggle">
+          <% if user_signed_in? %>
+            <div class="row"><strong>Hi <%= current_user.email %></strong></div>
+            <div class="row"><%= link_to 'Logout', destroy_user_session_path, method: :delete %></div>
+        
+            <div class="row"><%= link_to 'Add your organization', new_user_session_path %></div>
+            <% else %>
+         
+            <div class="row"><%= link_to "See Maps", maps_path %></div>
+            <div class="row"><%= link_to 'Add your organization', new_user_session_path %></div>
+           <% end %>
+        </div>
+    </nav>    
 
 
 <!-- <nav id="offcanvas" class="navmenu navmenu-inverse navmenu-fixed-right navmenu-site offcanvas" role="navigation">
