--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -1,9 +1,18 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Organizations</h1>
+
+
+
 <%= link_to 'New Map', new_map_path %>
 <div id="address-map" style="width: 100%; height: 400px;"></div>
 
+
+<hr>
+<%= form_tag maps_path, :method => :get do %>
+    <%= text_field_tag :search, params[:search] %>
+    <%= submit_tag "Search ", :name => nil %>
+<% end %>
 
 <table>
   <thead>
