formating list of maps

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@ src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAo6PzRAoZk4B0bjhRAuf-w75EP
 </head>
 
 <body>
-
+<div class="row">
 <nav>
       <h3 id="navTop" ><span class="glyphicon glyphicon-align-justify"></span></h3>
         <div id="menuToggle">
@@ -35,7 +35,7 @@ src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAo6PzRAoZk4B0bjhRAuf-w75EP
         </div>
     </nav>    
 
-
+</div>
 <!-- <nav id="offcanvas" class="navmenu navmenu-inverse navmenu-fixed-right navmenu-site offcanvas" role="navigation">
     <ul>
         <li><a href="#">Home</a></li>
