--- a/app/views/maps/show.html.erb
+++ b/app/views/maps/show.html.erb
@@ -1,12 +1,22 @@
 
-<ol class="breadcrumb">
-  <li> <%= @map.organization %></li>
-  <li> <%= @map.address %></li>
-<li> <%= @map.phone %></li>
-<li> <%= @map.website %></li>
-</ol>
+
+
 
 <%= link_to 'Edit', edit_map_path(@map) %> |
 <%= link_to 'Back', maps_path %>
 
 <div id='address-map' style="width: 100%; height: 400px;"></div>
+
+<div class = "row">
+	
+
+<p class="col-sm-2"><strong> <%= @map.organization %></p>
+<p class="col-sm-4"><%= @map.address %></p>
+<p class="col-sm-2"><%= @map.phone %></p>
+<p class="col-sm-2"><%= mail_to @map.website %><span class="glyphicon glyphicon-envelope"></p>
+
+
+</div>
+
+
+
