--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -18,16 +18,14 @@
 </header>
 
 <div class="row">
-<p>HELLO</p>
+<h1>HOW IT WORKS?</h1>
 </div>
-      <div class="row">
+<!--       <div class="row">
 <div id="address-map" style="width: 100%; height: 400px;"></div> 
 
-</div>
+</div> -->
 
-<div class="row">
-<p>HELLO</p>
-</div>
+
 
 <script>
 (function(window, document, $) {
