--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,8 +40,11 @@ width: 100vw;
 .container {
 width:110vw;
 height:30em;
-background: url("http://1vze7o2h8a2b2tyahl3i0t68.wpengine.netdna-cdn.com/wp-content/uploads/2015/06/lacma.jpg") no-repeat center center;
+
+/*background: url("http://1vze7o2h8a2b2tyahl3i0t68.wpengine.netdna-cdn.com/wp-content/uploads/2015/06/lacma.jpg") no-repeat center center;
+*/background: url('bake1.jpg');
 background-size:cover;
+
 /*position:absolute;*/
 margin-left: -10%;
 margin-top: 4%;
@@ -141,3 +144,9 @@ span.glyphicon {
   display: none;
 
 }*/
+/*#menuToggle {
+  z-index: 10;
+}*/
+.footer {
+
+}
