--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,22 +20,33 @@ src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAo6PzRAoZk4B0bjhRAuf-w75EP
 <body>
 <div class="row">
 <nav>
-      <h3 id="navTop" ><span class="glyphicon glyphicon-align-justify"></span></h3>
-        <div id="menuToggle">
+<!--       <h3 id="navTop" ><span class="glyphicon glyphicon-align-justify"></span></h3>
+ -->  <h3 id="navTop">MENU</h3>
+  
+  <div id="menuToggle">
           <% if user_signed_in? %>
             <div class="row"><strong>Hi <%= current_user.email %></strong></div>
+            <div class="row"><%= link_to "Bakers", maps_path %></div>
+            <div class="row"><%= link_to 'Add your Bakery', new_map_path %></div>
             <div class="row"><%= link_to 'Logout', destroy_user_session_path, method: :delete %></div>
         
-            <div class="row"><%= link_to 'Add your organization', new_user_session_path %></div>
+            
             <% else %>
          
-            <div class="row"><%= link_to "See Maps", maps_path %></div>
-            <div class="row"><%= link_to 'Add your organization', new_user_session_path %></div>
+            <div class="row"><%= link_to 'Log In', new_user_session_path %></div>
            <% end %>
         </div>
     </nav>    
 
 </div>
+
+
+<div class="row">
+  <div class ="footer">
+
+  </div>
+</div>
+
 <!-- <nav id="offcanvas" class="navmenu navmenu-inverse navmenu-fixed-right navmenu-site offcanvas" role="navigation">
     <ul>
         <li><a href="#">Home</a></li>
