--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -1,35 +1,37 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Organizations</h1>
-
-
-
-<%= link_to 'New Map', new_map_path %>
-<div id="address-map" style="width: 100%; height: 400px;"></div>
-
+<!-- <h1>Bakers</h1> -->
+<%#= link_to 'New Map', new_map_path %>
 
 <hr>
+
 <%= form_tag maps_path, :method => :get do %>
-    <%= text_field_tag :search, params[:search] %>
+    <%= text_field_tag :search, params[:search], placeholder: "Your Location?" %>
+    <%#= text_field_tag :location, params[:address], placeholder: 'address'  %>
+    <%#= number_field_tag :range, params[:range], placeholder: 'Distance in Miles' %>
     <%= submit_tag "Search ", :name => nil %>
 <% end %>
 <hr>
 
 
 
-   
- 
+
+<div id="address-map" style="width: 100%; height: 400px;"></div>
+
+
+
 
 
     <% @maps.each do |map| %>
-<div class="row">
+      <div class="row">
         <p class="col-sm-2"><strong><%= map.organization %></strong></p>
         <p class="col-sm-4"><%= map.address %></p>
-        <p class="col-sm-1"><%= map.phone %></p>
-        <p class="col-sm-2"><%= map.website %></p>
-        <p class="col-sm-1"><%= link_to 'Show', map %></p>
+     <!--    <p class="col-sm-1"><%#= map.phone %></p>
+        <p class="col-sm-2"><%#= map.website %></p> -->
+
+       
+        <p class="col-sm-1"><%= link_to 'Details', map %></p>
        <p class="col-sm-1"><%= link_to 'Edit', edit_map_path(map) %></p>
-        <p class="col-sm-1"><%= link_to 'Destroy', map, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <p class="col-sm-1"><%= link_to 'Destroy', map, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+     
       </div>
     <% end %>
 
