--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -5,21 +5,28 @@
 <header>
 
 
- <span  href="#" class="btn">LEARN MORE</span>
+ <span  href="#" class="btn">Find Out More...</span>
   <div class="container">
     <div class="row">
 
+
+
+
 <!--       <div class="col-lg-12">
  -->
-      <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+      <h1>The Open Kitchen</h1>
+      <h2>Connect with people & get homemade bakery </h2>
+
    <!--    </div> -->
     </div>
   </div>
 </header>
 
-<div class="row">
+
+
+<!-- <div class="row">
 <h1>HOW IT WORKS?</h1>
-</div>
+</div> -->
 <!--       <div class="row">
 <div id="address-map" style="width: 100%; height: 400px;"></div> 
 
