--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -4,7 +4,7 @@
 <hr>
 
 <%= form_tag maps_path, :method => :get do %>
-    <%= text_field_tag :search, params[:search], placeholder: "Your Location?" %>
+    <%= text_field_tag :search, params[:search], placeholder: "Keywords" %>
     <%#= text_field_tag :location, params[:address], placeholder: 'address'  %>
     <%#= number_field_tag :range, params[:range], placeholder: 'Distance in Miles' %>
     <%= submit_tag "Search ", :name => nil %>
