add maps on welcome page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,27 +21,24 @@ src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAo6PzRAoZk4B0bjhRAuf-w75EP
 
 
 
-<div class="row">
-<nav>
+<!-- <div class="row">
+<nav> -->
 <!--       <h3 id="navTop" ><span class="glyphicon glyphicon-align-justify"></span></h3>
- -->  <h3 id="navTop">MENU</h3>
-  
+<!- -->  <!-- <h3 id="navTop">MENU</h3> -->
+  <!-- 
   <div id="menuToggle">
-          <% if user_signed_in? %>
-            <div class="row"><strong>Hi <%= current_user.email %></strong></div>
-            <div class="row"><%= link_to "Bakers", maps_path %></div>
-            <div class="row"><%= link_to 'Add your Bakery', new_map_path %></div>
-            <div class="row"><%= link_to 'Logout', destroy_user_session_path, method: :delete %></div>
-        
-            
-            <% else %>
-         
-            <div class="row"><%= link_to 'Log In', new_user_session_path %></div>
-           <% end %>
-        </div>
+          <%# if user_signed_in? %>
+            <div class="row"><strong>Hi <%#= current_user.email %></strong></div>
+            <div class="row"><%#= link_to "Bakers", maps_path %></div>
+            <div class="row"><%#= link_to 'Add your Bakery', new_map_path %></div>
+            <div class="row"><%#= link_to 'Logout', destroy_user_session_path, method: :delete %></div> -->
+            <%# else %>
+<!--             <div class="row"><%#= link_to 'Log In', new_user_session_path %></div>
+ -->           <%# end %>
+<!--         </div>
     </nav>    
+</div> -->
 
-</div>
 
 
 <div class="row">
