--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,7 +47,7 @@ background-size:cover;
 
 /*position:absolute;*/
 margin-left: -10%;
-margin-top: 4%;
+/*margin-top: 4%;*/
 border-color: black;
 }
 
