--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -6,22 +6,56 @@
 
 
  <span  href="#" class="btn">Find Out More...</span>
+<div class="row">
+<nav> 
+      <h3 id="navTop" ><span class="glyphicon glyphicon-align-justify"></span></h3>
+ <h3 id="navTop">MENU</h3> 
+
+  <div id="menuToggle">
+          <% if user_signed_in? %>
+            <div class="row"><strong>Hi <%= current_user.email %></strong></div>
+            <div class="row"><%= link_to "Bakers", maps_path %></div>
+            <div class="row"><%= link_to 'Add your Bakery', new_map_path %></div>
+            <div class="row"><%= link_to 'Logout', destroy_user_session_path, method: :delete %></div> 
+            <% else %>
+           <div class="row"><%= link_to 'Log In', new_user_session_path %></div>
+           <% end %>
+        </div>
+    </nav>    
+</div> 
   <div class="container">
     <div class="row">
-
-
-
-
-<!--       <div class="col-lg-12">
- -->
       <h1>The Open Kitchen</h1>
       <h2>Connect with people & get homemade bakery </h2>
-
-   <!--    </div> -->
     </div>
   </div>
 </header>
+<div class="row">
+<%= form_tag maps_path, :method => :get do %>
+    <%= text_field_tag :search, params[:search], placeholder: "Keywords" %>
+    <%#= text_field_tag :location, params[:address], placeholder: 'address'  %>
+    <%#= number_field_tag :range, params[:range], placeholder: 'Distance in Miles' %>
+    <%= submit_tag "Search ", :name => nil %>
+<% end %>
+</div>
 
+<div class="row">
+<div id="address-map" style="width: 100%; height: 400px;"></div>
+
+    <% @maps.each do |map| %>
+      <div class="row">
+        <p class="col-sm-2"><strong><%= map.organization %></strong></p>
+        <p class="col-sm-4"><%= map.address %></p>
+     <!--    <p class="col-sm-1"><%#= map.phone %></p>
+        <p class="col-sm-2"><%#= map.website %></p> -->
+
+       
+        <p class="col-sm-1"><%= link_to 'Details', map %></p>
+       <p class="col-sm-1"><%= link_to 'Edit', edit_map_path(map) %></p>
+        <p class="col-sm-1"><%= link_to 'Destroy', map, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+      </div>
+    <% end %>
+</div>
 
 
 <!-- <div class="row">
