--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,7 +33,8 @@ overflow-x: hidden;
 } 
 
 .address-map{
-width: 100vw;
+width: 50vw;
+height: 400px;
 
 }
 
@@ -151,4 +152,13 @@ span.glyphicon {
 
 .footer {
 
+}
+
+.scroll {
+  border:2px solid black;
+
+  width:50%;
+  height:400px;
+  overflow:scroll;
+  margin-left: 300px;
 }
