--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -41,29 +41,36 @@
 <% end %>
 </div>
 
-<button id="show-map">
-<div class="row">
-<div id="address-map" style="width: 100vw; height: 400px;"></div>
-</div>
-</button>
 
-<div class="scroll" style="border:1px solid black;width:100%;height:100px;overflow:scroll">
+<!-- <button id="show-map"> -->
+
+<div class="row">
+  <div class="col-md-6">
+    <div id="address-map" style="width: 50vw; height: 400px; "></div>
+  </div>
+
+<!-- </button> -->
+
+
+
+<!-- <div class="row"> -->
+ <div class="col-md-6">
+  <div class="scroll" >
     <% @maps.each do |map| %>
-      <div class="row">
-        <p class="col-sm-2"><strong><%= map.organization %></strong></p>
-        <p class="col-sm-4"><%= map.address %></p>
+  <!--     <div class="row"> -->
+        <p><strong><%= map.organization %></strong>
+          <%= map.address %></p>
      <!--    <p class="col-sm-1"><%#= map.phone %></p>
         <p class="col-sm-2"><%#= map.website %></p> -->
-
-       
-        <p class="col-sm-1"><%= link_to 'Details', map %></p>
-       <p class="col-sm-1"><%= link_to 'Edit', edit_map_path(map) %></p>
-        <p class="col-sm-1"><%= link_to 'Destroy', map, method: :delete, data: { confirm: 'Are you sure?' } %></p>
-      </div>
+      <!--   <p class="col-sm-1"><%#= link_to 'Details', map %></p>
+        <p class="col-sm-1"><%#= link_to 'Edit', edit_map_path(map) %></p>
+        <p class="col-sm-1"><%#= link_to 'Destroy', map, method: :delete, data: { confirm: 'Are you sure?' } %></p> -->
     <% end %>
+  <!--   </div> -->
+</div>
+</div>
 </div>
 
-</div>
 <!-- <div class="row">
 <h1>HOW IT WORKS?</h1>
 </div> -->
