add bakeries to test scrolling jquery working

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -162,3 +162,9 @@ span.glyphicon {
   overflow:scroll;
   margin-left: 300px;
 }
+
+.form-search {
+   position:relative;
+    top: 50%;
+    left: 33%; 
+}
