--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -33,12 +33,16 @@
 
 
 <div class="row">
+
+<div class="form-search">
 <%= form_tag maps_path, :method => :get do %>
     <%= text_field_tag :search, params[:search], placeholder: "Keywords" %>
     <%#= text_field_tag :location, params[:address], placeholder: 'address'  %>
     <%#= number_field_tag :range, params[:range], placeholder: 'Distance in Miles' %>
     <%= submit_tag "Search ", :name => nil %>
 <% end %>
+
+</div>
 </div>
 
 
