--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -32,6 +32,7 @@
 </header>
 
 
+
 <div class="row">
 
 <div class="form-search">
@@ -48,21 +49,22 @@
 
 <!-- <button id="show-map"> -->
 
-<div class="row">
-  <div class="col-md-6">
-    <div id="address-map" style="width: 50vw; height: 400px; "></div>
+<div class="row mapping">
+  <div class=" col-sm-6  col-xs-offset-3 col-xs-8 ">
+    <div id="address-map" style="width: 100%; height: 400px; "></div>
   </div>
 
 <!-- </button> -->
 
 
-
+</div>
 <!-- <div class="row"> -->
- <div class="col-md-6">
+<hr>
+ <div class="col-sm-6 col-xs-offset-3 col-xs-8 ">
   <div class="scroll" >
     <% @maps.each do |map| %>
   <!--     <div class="row"> -->
-        <p><strong><%= map.organization %></strong>
+        <p><strong><%= map.organization %></strong> 
           <%= map.address %></p>
      <!--    <p class="col-sm-1"><%#= map.phone %></p>
         <p class="col-sm-2"><%#= map.website %></p> -->
