--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -6,7 +6,7 @@
 
 
  <span  href="#" class="btn">Find Out More...</span>
-<div class="row">
+<div class="row menu">
 <nav> 
       <h3 id="navTop" ><span class="glyphicon glyphicon-align-justify"></span></h3>
  <h3 id="navTop">MENU</h3> 
@@ -47,10 +47,10 @@
 
 <!-- <button id="show-map"> -->
 
-<!-- <div class="row mapping">
+<div class="row mapping">
   <div class=" col-sm-6  col-xs-offset-3 col-xs-8 ">
     <div id="address-map" style="width: 100%; height: 400px; "></div>
-  </div> -->
+  </div>
 
 <!-- </button> -->
 
@@ -58,9 +58,9 @@
 
 <!-- <div class="row"> -->
 
-<div = "row">
 <!--   <div class=" col-sm-6  col-xs-offset-3 col-xs-8 ">
  --> <div class="col-sm-8 col-xs-offset-2 col-xs-8 ">
+<div class= "row list">
 
     <% @maps.each do |map| %>
   <!--     <div class="row"> -->
@@ -76,9 +76,13 @@
 </div>
 </div>
 
-<!-- <div class="row">
-<h1>HOW IT WORKS?</h1>
-</div> -->
+
+
+<div class="row  footer col-md-12">
+<h1>BLABLABLABLA I AM A FOOTER</h1>
+</div>
+
+
 <!--       <div class="row">
 <div id="address-map" style="width: 100%; height: 400px;"></div> 
 
