--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -1,15 +1,19 @@
-<!-- <span href="#" class="btn"><div class="container"><%#= image_tag("ny.jpg", :size => "1000x700")%></div></span>  -->
-<!-- <span href="#" class="btn"><div class="container">HEllo</div></span>
- -->
+
 
 <header>
 
-
- <span  href="#" class="btn">Find Out More...</span>
 <div class="row menu">
+ <span  href="#" class="btn"><h1>Got Bread?</h1></span>
+
 <nav> 
-      <h3 id="navTop" ><span class="glyphicon glyphicon-align-justify"></span></h3>
- <h3 id="navTop">MENU</h3> 
+      <h3 id="navTop">
+      MENU
+
+
+
+
+      <span class="glyphicon glyphicon-align-justify"></span></h3>
+<!--  <h3 id="navTop"></h3>  -->
 
   <div id="menuToggle">
           <% if user_signed_in? %>
@@ -25,8 +29,8 @@
 </div> 
   <div class="container">
     <div class="row">
-      <h1>The Open Kitchen</h1>
-      <h2>Connect with people & get homemade bakery </h2>
+      <h1>HomeMade Bread </h1>
+      <h2>Subscribe to get weekly fresh home made bread nearby</h2>
     </div>
   </div>
 </header>
@@ -71,7 +75,7 @@
         <p class="col-sm-1"><%#= link_to 'Edit', edit_map_path(map) %></p>
         <p class="col-sm-1"><%#= link_to 'Destroy', map, method: :delete, data: { confirm: 'Are you sure?' } %></p> -->
     <% end %>
-  <!--   </div> -->
+    </div>
 
 </div>
 </div>
