add footer color

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,7 +32,7 @@ body {
 margin:0;
 overflow-x: hidden;
 /*background-color: black;*/
-  color: white;
+/*  color: white;*/
 /*  background-color: black;*/
 } 
 
@@ -172,6 +172,7 @@ span.glyphicon {
 .footer {
 background-color: black;
 margin-top: 50px;
+color: white;
 }
 
 .list {
