--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -165,9 +165,9 @@ span.glyphicon {
   display: none;
 
 }*/
-/*#menuToggle {
-  z-index: 10;
-}*/
+#menuToggle {
+  margin-right: 15px;
+}
 
 .footer {
 background-color: black;
@@ -234,7 +234,8 @@ padding-top: 10em;
   margin: 0 -4px;
   background: #f8f8f8;
   pointer-events: none;
-  min-height: 200px;
+  min-height: 200px; 
+
 
 }
 
@@ -271,4 +272,7 @@ ul {
   padding-right: 12px;
 }
 
+.storelocator-panel {
+  box-sizing: border-box;
+}
 
