--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -13,12 +13,12 @@
 
   <div class ="row" id="menuToggle">
           <% if user_signed_in? %>
-            <div class="row"><strong>Hi <%= current_user.email %></strong></div>
-            <div class="row"><%= link_to "Bakers", maps_path %></div>
-            <div class="row"><%= link_to 'Add your Bakery', new_map_path %></div>
-            <div class="row"><%= link_to 'Logout', destroy_user_session_path, method: :delete %></div> 
+            <div class="row">Hi <%= current_user.email %></div>
+            <div class="row" id="bakers"><h4><%= link_to "BAKERS", maps_path %></h4></div>
+            <div class="row" id="add"><%= link_to 'ADD YOUR BAKERY', new_map_path %></div>
+            <div class="row" id= "out"><%= link_to 'LOGOUT', destroy_user_session_path, method: :delete %></div> 
             <% else %>
-           <div class="row"><%= link_to 'Log In', new_user_session_path %></div>
+           <div class="row" id="in"><%= link_to 'LOG IN', new_user_session_path %></div>
            <% end %>
         </div>
     </nav>    
