cahnge list org size

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -259,6 +259,7 @@ ul {
   padding: 0;
   display: block;
   font-size: 12px;
+  color: black
 }
 
 .store {
@@ -332,4 +333,7 @@ ul {
 -moz-transform:scale(1.5); 
 -webkit-transform:scale(1.5);
 -o-transform:scale(1.5);
+}
+.website {
+  color: pink
 }
