add form search in welcome page

--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -59,7 +59,12 @@
 <div class="row mapping">
   <div class="storelocator-panel">
     <form class="storelocator-filter">
-      
+      <%= form_tag maps_path, :method => :get do %>
+    <%= text_field_tag :search, params[:search], placeholder: "Keywords" %>
+    <%#= text_field_tag :location, params[:address], placeholder: 'address'  %>
+    <%#= number_field_tag :range, params[:range], placeholder: 'Distance in Miles' %>
+    <%= submit_tag "Search ", :name => nil %>
+<% end %>
 
     </form>
  <!--    <div class="scroll"> -->
