--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -183,16 +183,32 @@ margin: 0 auto;
 padding-top: 50px;
 
 }
-/*.scroll {
+.scroll {
   border:2px solid white;
   margin: 0 auto;
 padding-top: 10em;
   width:100%;
   height:400px;
   overflow:scroll;
+}
 
-/*  margin-left: 300px;
-*//*}*/
+.storelocator-panel {
+  border: 2px solid black;
+    margin: 0 auto;
+padding-top: 10em;
+/*  width:100%;*/
+  height:400px;
+  overflow:scroll;
+}
+.store-locator{
+  border:2px solid white;
+  margin: 0 auto;
+padding-top: 10em;
+  width:100%;
+  height:415px;
+  overflow:scroll;
+
+}
 
 .form-search {
    position:relative;
@@ -203,6 +219,7 @@ padding-top: 10em;
 .mapping {
  padding-top: 50px;
   margin: 0 170px;
+  z-index: -10000000;
 }
 
 
@@ -224,7 +241,7 @@ padding-top: 10em;
 
 /*@media (min-width: 768px)*/
 .store-list {
-  width: 33.33333333%;
+  width: 100%;
   position: relative;
   border: 1px solid #e0e0e0;
   border-right: none;
@@ -270,6 +287,7 @@ ul {
  /* border-bottom: 1px solid #e0e0e0;*/
   padding: 8px 0 20px 8px;
   position: relative;
+    z-index: 10000000;
 }
 .store:last-child {
   border: none;
@@ -282,6 +300,7 @@ ul {
 
 .storelocator-panel {
   box-sizing: border-box;
+  height: 415px;
 }
 
 .row a{
@@ -343,6 +362,7 @@ ul {
   color: rgb(178, 119, 86);
   letter-spacing: 5px;
   line-height: 3;
+  z-index: 10000000;
 }
 
 #bread {
@@ -369,4 +389,5 @@ ul {
   background-color: rgba(248, 248, 248, 1);
   padding-bottom: 50px;
   padding-top: 20px;
+  z-index: -10000000;
 }
