--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -57,8 +57,7 @@
 <!-- </button> -->
 <div class="map-container">
 <div class="row mapping">
-  <div class="storelocator-panel">
-    <form class="storelocator-filter">
+   <form class="storelocator-filter">
       <%= form_tag maps_path, :method => :get do %>
     <%= text_field_tag :search, params[:search], placeholder: "Keywords" %>
     <%#= text_field_tag :location, params[:address], placeholder: 'address'  %>
@@ -67,27 +66,37 @@
 <% end %>
 
     </form>
+  <div class=" col-sm-4 storelocator-panel">
+ 
+
+
  <!--    <div class="scroll"> -->
       <div class="store-list ">
         <!-- <li class="store" id="store1"></li> -->
           <ul class="store">
+          
             <% @maps.each do |map| %>
-            <div class ="title"><h4><%= map.organization.capitalize %></h4></div>
+            <li class="store" id="store1">
+            <li class ="title"><h4><%= map.organization.capitalize %></h4></li>
              <div class="address"><%= map.address.split.map(&:capitalize).join(' ') %></div>
               <div class="phone"><%= map.phone %></div>
-                <div class="website"><%= mail_to map.website %></div>
+                <li class="website"><%= mail_to map.website %></li>
+                </li>
                 <hr>
                 <%end%>
                 </div>
       </ul>      
   </div>
 
-  <div class="col-sm-8 hidden-xs">
-    <div id="address-map" style=" position: absolute; left: 0px; top: 0px; z-index: 2; width: 726px; height: 726px ;"></div>
+  <div class="col-sm-8 ">
+ <!--    <div id="address-map" style=" position: absolute; left: 0px; top: 0px; width: 400px; height: 726px ;"></div> -->
+ <div id="address-map" style=" position: absolute; left: 0px; top: 0px; width: 101%; height: 414px; transform: translateZ(0px); background-color: rgb(229, 227, 223);"></div>
   </div> 
 
   </div> 
   </div>
+
+
 
 <!-- <div class="row"> -->
 
