--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -193,7 +193,7 @@ padding-top: 10em;
 }
 
 .storelocator-panel {
-  border: 2px solid black;
+  /*border: 2px solid black;*/
     margin: 0 auto;
 padding-top: 10em;
 /*  width:100%;*/
