add swing to got bread

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -94,7 +94,7 @@ border-color: black;
 }
 */
 
-span.btn {
+/*span.btn {
   display: inline-block;
   background: rgba(0,0,0,0.5);
   padding: 15px;
@@ -107,7 +107,7 @@ span.btn {
   left: 32.5%;
   margin: 0 auto;
   width: 35%;
-}
+}*/
 
 span.glyphicon {
   display: inline-block;
