--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -3,9 +3,11 @@
 <header>
 
 <div class="row menu">
- <span class="btn" id="name-blur"><h1>Got Bread?</h1></span>
+ <span class="btn animated infinite" id="name-blur"><h1 class="animated infinite swing" id="swing">Got Bread?</h1></span>
+<!-- <h1 class="animated infinite bounce">Example</h1>
+ --><nav> 
 
-<nav> 
+
       <h3 id="navTop">
       MENU
       <span class="glyphicon glyphicon-align-justify"></span></h3>
