--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -256,7 +256,7 @@ padding-top: 10em;
   left: 4px;
   margin: 0 -4px;
   background: #f8f8f8;
-  pointer-events: none;
+  /*pointer-events: none;*/
   min-height: 200px; 
 
 
