--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -397,3 +397,9 @@ ul {
   padding-top: 20px;
   z-index: -10000000;
 }
+
+#swing {
+  -webkit-animation-duration: 5s;
+  -webkit-animation-delay: 2s;
+/*  -webkit-animation-iteration-count: infinite;
+*/}
