--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -3,7 +3,7 @@
 <header>
 
 <div class="row menu">
- <span class="btn animated infinite" id="name-blur"><h1 class="animated infinite swing" id="swing">Got Bread?</h1></span>
+ <span class="btn animated infinite" id="name-blur"><h1 class="animated fadeInDownBig" id="swing">Got Bread?</h1></span>
 <!-- <h1 class="animated infinite bounce">Example</h1>
  --><nav> 
 
