--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -201,7 +201,7 @@ padding-top: 10em;
 .store-locator{
   border:2px solid white;
   margin: 0 auto;
-padding-top: 10em;
+  padding-top: 10em;
   width:100%;
   height:415px;
   overflow:scroll;
@@ -276,7 +276,7 @@ h3.navTop {
 
 ul {
   list-style-type: none;
-  line-height: 1.2;
+  line-height: 2.2;
   margin: 0;
   padding: 0;
   display: block;
@@ -286,9 +286,12 @@ ul {
 
 .store {
  /* border-bottom: 1px solid #e0e0e0;*/
-  padding: 8px 0 20px 8px;
+/*  padding: 8px 0 20px 8px;
+
+*/
+  padding:5px;
   position: relative;
-    z-index: 10000000;
+  z-index: 10000000;
 }
 .store:last-child {
   border: none;
@@ -403,3 +406,21 @@ ul {
   -webkit-animation-delay: 2s;
 /*  -webkit-animation-iteration-count: infinite;
 */}
+
+.website a {
+  letter-spacing: 2px;
+}
+
+#search {
+      width: 63.20em;
+      padding: 15px;
+}
+
+#press {
+        width: 63.20em;
+
+}
+
+input[type] {
+   width: 63.20em;
+}
