--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@ src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAo6PzRAoZk4B0bjhRAuf-w75EP
 </script>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.3.0/animate.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 
