--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -59,15 +59,17 @@
 <!-- </button> -->
 <div class="map-container">
 <div class="row mapping">
+  <div class=" col-sm-12">
    <form class="storelocator-filter">
+
       <%= form_tag maps_path, :method => :get do %>
-    <%= text_field_tag :search, params[:search], placeholder: "Keywords" %>
+    <strong><%= text_field_tag :search, params[:search], placeholder: "Search..." %></strong>
     <%#= text_field_tag :location, params[:address], placeholder: 'address'  %>
     <%#= number_field_tag :range, params[:range], placeholder: 'Distance in Miles' %>
-    <div id="press"> <%= submit_tag "Search ", :name => nil %></div>
+ <!--    <div id="press"> <%#= submit_tag " Search " , :name => nil %></div> -->
 <% end %>
-
     </form>
+
   <div class=" col-sm-4 storelocator-panel">
  
 
