--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -438,3 +438,26 @@ input {
 input[type="submit"] {
 color: #F8F8F8;
 }
+
+.social {
+  text-align: center;
+    font-size: 32px;
+}
+
+.copy {
+  text-align: center;
+    padding: 10px;
+  padding-top: 60px;
+}
+
+i {
+  font-size: 32px;
+}
+
+.fa {
+  padding: 10px;
+  padding-top: 60px;
+  cursor: pointer;
+}
+
+
