--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -124,7 +124,19 @@
 
 
 <div class="row  footer col-md-12">
-<h1>BLABLABLABLA I AM A FOOTER</h1>
+
+<div class=" col-xs-6 col-sm-4 copy">
+<h4>Copyright © gotbread.com 2015</h4>
+</div>
+<div class=" col-xs-6 col-sm-4 ">
+</div>
+<div class=" col-xs-6 col-sm-4 social">
+  <i class="fa fa-facebook"></i>
+  <i class="fa fa-twitter"></i>
+  <i class="fa fa-instagram"></i>
+
+</div>
+
 </div>
 
 
