add script in html

--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -385,4 +385,15 @@ var vague = $(".container").Vague({intensity:10});
 $(".btn").on("click",$.proxy(vague.toggleblur,vague));
 </script>
 
+<script >
+$(document).ready(function(){
+$('#menuToggle').hide() 
+
+  $('#navTop').click(function(){
+    $('#menuToggle').slideToggle()
+  })
+
+})
+</script>
+
 
