--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,7 +39,7 @@ overflow-x: hidden;
 } 
 
 .menu {
-    color: white;
+  color: white;
   background-color: black;
 }
 .address-map{
@@ -57,8 +57,8 @@ h3, .h3 {
 }
 
 
-.container {
-width:125vw;
+.pic {
+width:110vw;
 height:40em;
 
 /*background: url("http://1vze7o2h8a2b2tyahl3i0t68.wpengine.netdna-cdn.com/wp-content/uploads/2015/06/lacma.jpg") no-repeat center center;
@@ -172,11 +172,11 @@ span.glyphicon {
 
 .footer {
 background-color: black;
-margin-top: 50px;
+/*margin-top: 50px;*/
 color: white;
 /*margin: 0 auto;*/
-margin-top: 50px;
-padding-bottom: 70px;
+/*margin-top: 50px;*/
+padding-bottom: 50px;
 }
 
 .list {
@@ -402,8 +402,8 @@ ul {
 
 .map-container{
   background-color: rgba(248, 248, 248, 1);
-  padding-bottom: 50px;
-  padding-top: 20px;
+  padding-bottom: 90px;
+  padding-top: 30px;
   z-index: -10000000;
 }
 
@@ -444,8 +444,8 @@ color: #F8F8F8;
 
 .copy {
   text-align: center;
-    padding: 10px;
-  padding-top: 60px;
+  padding: 10px;
+  padding-top: 50px;
 }
 
 i {
@@ -454,8 +454,10 @@ i {
 
 .fa {
   padding: 10px;
-  padding-top: 60px;
+  padding-top: 50px;
   cursor: pointer;
 }
+
+
 
 
