--- a/app/views/static_pages/welcome.html.erb
+++ b/app/views/static_pages/welcome.html.erb
@@ -1,78 +1,43 @@
-
-
 <header>
-
-<div class="row menu">
- <span class="btn animated infinite" id="name-blur"><h1 class="animated fadeInDownBig" id="swing">Got Bread?</h1></span>
-<!-- <h1 class="animated infinite bounce">Example</h1>
- --><nav> 
-
-
-      <h3 id="navTop">
-      MENU
-      <span class="glyphicon glyphicon-align-justify"></span></h3>
-
-  <div class ="row" id="menuToggle">
+  <div class="row menu">
+    <span class="btn animated infinite" id="name-blur"><h1 class="animated fadeInDownBig" id="swing">Got Bread?</h1></span>
+      <nav> 
+        <h3 id="navTop">MENU
+        <span class="glyphicon glyphicon-align-justify"></span></h3>
+        <div class ="row" id="menuToggle">
           <% if user_signed_in? %>
             <div class="row">Hi <%= current_user.email %></div>
             <div class="row" id="bakers"><h5><%= link_to "BAKERS", maps_path %></h5></div>
             <div class="row" id="add"><h5><%= link_to 'ADD YOUR BAKERY', new_map_path %></h5></div>
             <div class="row" id= "out"><h5><%= link_to 'LOGOUT', destroy_user_session_path, method: :delete %></h5></div> 
-            <% else %>
-           <div class="row" id="in"><h5><%= link_to 'LOG IN', new_user_session_path %><h5></div>
-           <% end %>
-        </div>
-    </nav>    
-</div> 
-  <div class="container">
-    <div class="row">
-      <div id="bread"><h1>HomeMade Bread</h1>
-      </div>
-      <div id="bread2"><h2>Subscribe to get weekly fresh home made bread nearby</h2>
-      </div>
-    </div>
+          <% else %>
+            <div class="row" id="in"><h5><%= link_to 'LOG IN', new_user_session_path %><h5></div>
+          <% end %>
+            </div>
+    </nav> 
+            </div> 
+
+  <div class="container pic">
+  <div class="row">
+
+    <div id="bread"><h1>HomeMade Bread</h1></div>
+    <div id="bread2"><h2>Subscribe to get weekly fresh home made bread nearby</h2></div>
   </div>
+</div>
 </header>
 
-<!-- <div class="row">
-
-<div class="form-search"> -->
-<%#= form_tag maps_path, :method => :get do %>
-    <%#= text_field_tag :search, params[:search], placeholder: "Keywords" %>
-    <%#= text_field_tag :location, params[:address], placeholder: 'address'  %>
-    <%#= number_field_tag :range, params[:range], placeholder: 'Distance in Miles' %>
-    <%#= submit_tag "Search ", :name => nil %>
-<%# end %>
-
-<!-- </div>
-</div> -->
-
-
-<!-- <button id="show-map"> -->
-
-<!-- <div class="row mapping">
-  <div class=" col-sm-6  col-xs-offset-3 col-xs-8 ">
-    <div id="address-map" style="width: 100%; height: 400px; "></div>
-  </div> -->
-
-<!-- </button> -->
 <div class="map-container">
-<div class="row mapping">
-  <div class=" col-sm-12">
-   <form class="storelocator-filter">
-
-      <%= form_tag maps_path, :method => :get do %>
-    <strong><%= text_field_tag :search, params[:search], placeholder: "Search..." %></strong>
-    <%#= text_field_tag :location, params[:address], placeholder: 'address'  %>
-    <%#= number_field_tag :range, params[:range], placeholder: 'Distance in Miles' %>
+  <div class="row mapping">
+    <div class=" col-sm-12">
+      <form class="storelocator-filter">
+        <%= form_tag maps_path, :method => :get do %>
+        <strong><%= text_field_tag :search, params[:search], placeholder: "Search..." %></strong>
+        <%#= text_field_tag :location, params[:address], placeholder: 'address'  %>
+        <%#= number_field_tag :range, params[:range], placeholder: 'Distance in Miles' %>
  <!--    <div id="press"> <%#= submit_tag " Search " , :name => nil %></div> -->
-<% end %>
-    </form>
-
-  <div class=" col-sm-4 storelocator-panel">
- 
-
-
+        <% end %>
+      </form>
+      <div class=" col-sm-4 storelocator-panel">
  <!--    <div class="scroll"> -->
       <div class="store-list">
         <!-- <li class="store" id="store1"></li> -->
@@ -80,46 +45,23 @@
             <% @maps.each do |map| %>
             <li class="store" id="store1">
             <li class ="title"><h4><%= map.organization.capitalize %></h4></li>
-             <li class="address"><%= map.address.split.map(&:capitalize).join(' ') %></li>
-              <li class="phone"><%= map.phone %></li>
-                <li class="website"><%= mail_to map.website %></li>
-                </li>
-                <hr>
-                <%end%>
-                </div>
-      </ul>      
-  </div>
+            <li class="address"><%= map.address.split.map(&:capitalize).join(' ') %></li>
+            <li class="phone"><%= map.phone %></li>
+            <li class="website"><%= mail_to map.website %></li>
+            </li>
+            <hr>
+            <%end%>
+           </ul> 
+      </div>
+      </div>
 
-  <div class="col-sm-8 ">
+      <div class="col-sm-8 ">
+        <div id="address-map" style=" position: absolute; left: 0px; top: 0px; width: 101%; height: 414px; transform: translateZ(0px); background-color: rgb(229, 227, 223);"></div>
+      </div> 
 
- <div id="address-map" style=" position: absolute; left: 0px; top: 0px; width: 101%; height: 414px; transform: translateZ(0px); background-color: rgb(229, 227, 223);"></div>
   </div> 
-
-  </div> 
   </div>
-
-
-
-<!-- <div class="row"> -->
-
-<!--   <div class=" col-sm-6  col-xs-offset-3 col-xs-8 ">
- --> <!-- <div class="col-sm-8 col-xs-offset-2 col-xs-8 ">
-<div class= "row list"> -->
-
-    <%# @maps.each do |map| %>
-  <!--     <div class="row"> -->
-       <!--  <strong> --><%#= map.organization %> <!-- </strong> --><%#= map.address.split.map(&:capitalize).join(' ') %> 
-     <!--    <p class="col-sm-1"><%#= map.phone %></p>
-        <p class="col-sm-2"><%#= map.website %></p> -->
-      <!--   <p class="col-sm-1"><%#= link_to 'Details', map %></p>
-        <p class="col-sm-1"><%#= link_to 'Edit', edit_map_path(map) %></p>
-        <p class="col-sm-1"><%#= link_to 'Destroy', map, method: :delete, data: { confirm: 'Are you sure?' } %></p> -->
-    <%# end %>
-<!--     </div>
-
 </div>
-</div> -->
-
 
 
 <div class="row  footer col-md-12">
@@ -137,7 +79,6 @@
 </div>
 
 </div>
-
 
 
 
